--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit==1.22.0
-opencv-python-headless==4.5.5.64
-cvzone==1.5.6
-Pillow==9.3.0
-numpy==1.21.4
-ultralytics==8.0.25
+opencv-python-headless>=4.5.5.64
+cvzone>=1.5.6
+Pillow>=9.3.0
+numpy>=1.21.0,<1.25.0
+ultralytics>=8.0.25
